[gd_scene load_steps=6 format=3 uid="uid://dobqcdavdvkdf"]

[ext_resource type="Script" uid="uid://bt32k5ls4lewx" path="res://scenes/bike/components/bike_mesh.gd" id="1_script"]
[ext_resource type="Resource" path="res://resources/bikes/pocket_bike.tres" id="2_rp2el"]
[ext_resource type="Material" uid="uid://bfxhki5bfmyn1" path="res://assets/materials/tail_light_material.tres" id="3_n1tms"]
[ext_resource type="PackedScene" uid="uid://bn73ermusily2" path="res://scenes/bike/mods/training_wheels_mod.tscn" id="4_voh27"]

[sub_resource type="BoxMesh" id="BoxMesh_sdhfr"]
size = Vector3(0.3, 0.055, 0.05)

[node name="BikeMesh" type="Node3D"]
script = ExtResource("1_script")
bike_config = ExtResource("2_rp2el")

[node name="MeshContainer" type="Node3D" parent="."]

[node name="TailLight" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.94790524, 0.958052)
mesh = SubResource("BoxMesh_sdhfr")
surface_material_override/0 = ExtResource("3_n1tms")

[node name="Mods" type="Node3D" parent="."]

[node name="TrainingWheels" type="Node3D" parent="Mods"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07463604, 0.68403995)
visible = false

[node name="TrainingWheelsMod" parent="Mods/TrainingWheels" instance=ExtResource("4_voh27")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0.335, 0.117)
is_left_wheel = false

[node name="TrainingWheelsMod2" parent="Mods/TrainingWheels" instance=ExtResource("4_voh27")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, -0.15, 0.335, 0.117)

[node name="WheelMarkers" type="Node3D" parent="."]

[node name="FrontWheelMarker" type="Marker3D" parent="WheelMarkers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6935269)

[node name="RearWheelMarker" type="Marker3D" parent="WheelMarkers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.7299706)
